[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dialogs/Tip.gd" type="Script" id=1]

[node name="Tip" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_bottom = 51.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicTip1" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -890.0
margin_top = 60.0
margin_right = -456.0
margin_bottom = 152.0
window_title = "Tip"
dialog_text = "That bat just bit you, and you lost 1 health! Click on a red attack card to give yourself an opportunity to hit back"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicTip2" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -463.0
margin_top = 179.0
margin_right = -29.0
margin_bottom = 271.0
window_title = "Tip"
dialog_text = "Now aim you can aim your attack. Make sure the bat is in the red area then click left mouse button."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicTip3" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -464.0
margin_top = 177.0
margin_right = -30.0
margin_bottom = 269.0
window_title = "Tip"
dialog_text = "Cards are discarded once played, and will stay in the discard pile until there are no more cards left in the draw pile. Then the discard pile will be shuffled and become the draw pile"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyTip1" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -434.0
margin_top = 50.0
margin_bottom = 142.0
window_title = "Tip"
dialog_text = "Once bats spot you, on their turn they will fly close and bite you. Luckily they don't have a great memory so if you can get far enough away they may forget you"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlTip1" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -434.0
margin_top = 50.0
margin_bottom = 142.0
window_title = "Tip"
dialog_text = "Press space bar to zoom out and get a view of the whole arena"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyTip2" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -434.0
margin_top = 50.0
margin_bottom = 142.0
window_title = "Tip"
dialog_text = "Walkies always know where you are and will advance towards you on their turn. Luckily, they can't move very far in one go."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlTip2" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -434.0
margin_top = 50.0
margin_bottom = 142.0
window_title = "Tip"
dialog_text = "If you can't see all the information on a card,  hold right click over it"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyTip3" type="AcceptDialog" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -434.0
margin_top = 50.0
margin_bottom = 142.0
window_title = "Tip"
dialog_text = "If a Mage spots you it will start a fireball spell on its turn, and then launch it at you on the turn after that. Once you have been spotted, the mage will keep attacking until one of you is dead."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
